syntax = "proto3";

option java_package = "com.company.order.api";
option java_multiple_files = true;

message OrderCreateRequest {
  repeated OrderItem order_items = 1;
}

message OrderCreateResponse {
  Order order = 1;
}

message OrderSearchRequest {
}

message OrderSearchResponse {
  repeated Order orders = 1;
}

service OrderService {
  rpc createOrder(OrderCreateRequest) returns (OrderCreateResponse);
  rpc searchOrders(OrderSearchRequest) returns (OrderSearchResponse);
}

message Order {
  string id = 1;
  repeated OrderItem order_items = 2;
}

message OrderItem {
  string id = 1;
  Product product = 2;
  int32 quantity = 3;
}

message Product {
  string id = 1;
  string name = 2;
}